--- a/GitHubRepoSearch/app/src/main/res/layout/activity_main.xml
+++ b/GitHubRepoSearch/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -27,8 +28,10 @@
         android:id="@+id/et_search_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:hint="@string/enter_a_query_and_then_click_search"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        tools:ignore="TextFields" />
 
     <TextView
         android:id="@+id/tv_url_display"
