--- a/Task03/app/src/main/res/layout/activity_main.xml
+++ b/Task03/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <androidx.viewpager.widget.PagerTabStrip
+        <androidx.viewpager.widget.PagerTitleStrip
             android:id="@+id/TabStrip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
