--- a/Task03/app/src/main/res/layout/activity_main.xml
+++ b/Task03/app/src/main/res/layout/activity_main.xml
@@ -8,48 +8,53 @@
     tools:context=".MainActivity">
 
     <Toolbar
+        android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        android:titleTextColor="@color/design_default_color_background" />
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/design_default_color_background"
+        app:tabRippleColor="@color/design_default_color_background"
         app:tabSelectedTextColor="@color/cardview_shadow_start_color"
         tools:ignore="PrivateResource">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/dogTabItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:icon="@drawable/dog_icon"
             android:text="@string/dog" />
 
-
         <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/car_icon"
-            android:text="@string/car" />
-
-
-        <com.google.android.material.tabs.TabItem
+            android:id="@+id/rocketTabItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:icon="@drawable/rocket_icon"
             android:text="@string/rocket" />
 
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/carTabItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/car_icon"
+            android:text="@string/car" />
+
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
-        android:background="@color/design_default_color_background"
         android:id="@+id/ViewPager"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="6">
+        android:layout_weight="6"
+        android:background="@color/design_default_color_background">
 
     </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
