--- a/Task03/app/src/main/res/layout/fragment_car.xml
+++ b/Task03/app/src/main/res/layout/fragment_car.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentThird">
+    tools:context=".FragmentCar">
 
     <ImageView
+        android:id="@+id/CarImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="8dp"
         android:scaleType="centerCrop"
-        android:id="@+id/CarImage"
-        android:src="@drawable/car"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:src="@drawable/car" />
 
 </FrameLayout>
