--- a/WeatherApp/app/src/main/res/layout/fragment_today.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_today.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:padding="124dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/background_android"
+        android:src="@drawable/android"
         app:layout_constraintBottom_toTopOf="@+id/today_recyclerView"
         app:layout_constraintTop_toBottomOf="@id/text_main" />
 
