--- a/WeatherApp/app/src/main/res/layout/fragment_three_days.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_three_days.xml
@@ -38,7 +38,9 @@
             android:id="@+id/three_days_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
+            android:background="@color/design_default_color_background"
+            android:scaleType="centerCrop"
+            android:visibility="invisible" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/three_days_recycler_view"
@@ -51,17 +53,37 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progressBarThreeDays"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:indeterminateTint="@color/cardview_shadow_start_color"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center_horizontal"-->
-<!--        android:background="@color/design_default_color_background" />-->
+    <!--    <ProgressBar-->
+    <!--        android:id="@+id/progressBarThreeDays"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:indeterminateTint="@color/cardview_shadow_start_color"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="center_horizontal"-->
+    <!--        android:background="@color/design_default_color_background" />-->
 
     <ImageView
         android:id="@+id/threeDaysError"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ear" />
+
+    <TextView
+        android:id="@+id/no_connection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="no connection"
+        android:textAllCaps="true"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/no_connection_on_server"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="no connection on server"
+        android:textAllCaps="true"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </ViewFlipper>
