--- a/WeatherApp/app/src/main/res/layout/fragment_today.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_today.xml
@@ -35,11 +35,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_main" />
 
+        <ImageView
+            android:id="@+id/today_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/design_default_color_background"
+            android:scaleType="centerCrop"
+            android:visibility="invisible" />
+
 
         <ImageView
             android:id="@+id/weather_condition"
-            android:layout_width="128dp"
-            android:layout_height="128dp"
+            android:layout_width="88dp"
+            android:layout_height="88dp"
             android:backgroundTintMode="add"
             app:layout_constraintBottom_toTopOf="@+id/today_recyclerView"
             app:layout_constraintEnd_toStartOf="@+id/temperature"
@@ -50,7 +58,7 @@
             android:id="@+id/temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="68sp"
+            android:textSize="52sp"
             app:layout_constraintBottom_toTopOf="@+id/today_recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/weather_condition"
@@ -82,17 +90,38 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progressBarToday"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:indeterminateTint="@color/cardview_shadow_start_color"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center_horizontal"-->
-<!--        android:background="@color/design_default_color_background" />-->
+    <!--    <ProgressBar-->
+    <!--        android:id="@+id/progressBarToday"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:indeterminateTint="@color/cardview_shadow_start_color"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="center_horizontal"-->
+    <!--        android:background="@color/design_default_color_background" />-->
 
     <ImageView
         android:id="@+id/todayError"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ear" />
+
+    <TextView
+        android:id="@+id/no_connection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="no connection"
+        android:textAllCaps="true"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/no_connection_on_server"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="no connection on server"
+        android:textAllCaps="true"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
 </ViewFlipper>
